<resources>
    <string name="app_name">Tugas1_AKB</string>
    <string name="title_activity_register">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="nim">NIM</string>
    <string name="nama">Nama</string>
    <string name="kelas">Kelas</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="deskripsi_gambar">Deskripsi</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="logout">Logout</string>
    <string name="txt2">:</string>
    <string name="profile">Profile</string>
    <string name="nim2">10118375</string>
    <string name="nama2">Teguh Ary Erdiansyah</string>
    <string name="kelas2">IF - 9</string>
    <string name="deskripsi2">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
    </string>
</resources>
