<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.Register"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/imgRegister"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher_round"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/deskripsi_gambar" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="50dp"
            android:text="@string/register"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/inpRegisterNama"
            android:hint="@string/nama"
            android:layout_margin="15sp"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/inpRegisterUsername"
            android:hint="@string/username"
            android:layout_margin="15sp"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:importantForAutofill="no" />


        <EditText
            android:id="@+id/inpRegisterPassword"
            android:hint="@string/password"
            android:layout_margin="15sp"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:importantForAutofill="no" />

        <Button
            android:background="@color/colorPrimaryDark"
            android:id="@+id/btnRegister2"
            android:layout_margin="30sp"
            android:layout_gravity="bottom|center"
            android:text="@string/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:background="@color/colorPrimaryDark"
            android:id="@+id/btnLogin2"
            android:layout_margin="30sp"
            android:layout_gravity="bottom|center"
            android:text="@string/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>